--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
   - package-ecosystem: "docker-compose"
     directory: "/"
     schedule:
-      interval: "daily" # Can be "daily", "weekly", "monthly"
+      interval: "weekly" # Can be "daily", "weekly", "monthly"
     allow:
       - dependency-type: "direct"
     target-branch: "main"
